[gd_scene load_steps=8 format=3 uid="uid://b62ioxhftvwg7"]

[ext_resource type="Script" path="res://addons/gdterm/terminal/term.gd" id="1_o0o4i"]

[sub_resource type="SystemFont" id="SystemFont_fia1r"]
font_names = PackedStringArray("Noto Color Emoji")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_bdf21"]
fallbacks = Array[Font]([SubResource("SystemFont_fia1r")])
font_names = PackedStringArray("Monospace")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_o16vk"]
font_names = PackedStringArray("Noto Color Emoji")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_ovgsd"]
fallbacks = Array[Font]([SubResource("SystemFont_o16vk")])
font_names = PackedStringArray("Monospace")
font_weight = 100
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_w8l23"]
font_names = PackedStringArray("Noto Color Emoji")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_cxegq"]
fallbacks = Array[Font]([SubResource("SystemFont_w8l23")])
font_names = PackedStringArray("Monospace")
font_weight = 700
subpixel_positioning = 0

[node name="term" type="HBoxContainer"]
script = ExtResource("1_o0o4i")

[node name="menu" type="PopupMenu" parent="."]
auto_translate_mode = 1
size = Vector2i(63, 62)
always_on_top = true
system_menu_id = 2
item_count = 9
item_0/text = "Copy (Shift+Ctrl+C)"
item_1/text = "Paste (Shift+Ctrl+V)"
item_1/id = 1
item_2/text = "Restart"
item_2/id = 2
item_3/text = "Close"
item_3/id = 8
item_4/id = 7
item_4/separator = true
item_5/text = "New Above"
item_5/id = 3
item_6/text = "New Below"
item_6/id = 4
item_7/text = "New Left"
item_7/id = 5
item_8/text = "New Right"
item_8/id = 6

[node name="GDTerm" type="GDTerm" parent="."]
font = SubResource("SystemFont_bdf21")
dim_font = SubResource("SystemFont_ovgsd")
bold_font = SubResource("SystemFont_cxegq")
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="scrollbar" type="VScrollBar" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 1
mouse_filter = 1
max_value = 48.0
step = 1.0
page = 24.0
value = 24.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="id_pressed" from="menu" to="." method="_on_menu_id_pressed"]
[connection signal="bell_request" from="GDTerm" to="." method="_on_gd_term_bell_request"]
[connection signal="copy_request" from="GDTerm" to="." method="_on_gd_term_copy_request"]
[connection signal="inactive" from="GDTerm" to="." method="_on_gd_term_inactive"]
[connection signal="paste_request" from="GDTerm" to="." method="_on_gd_term_paste_request"]
[connection signal="scrollback_changed" from="GDTerm" to="." method="_on_gd_term_scrollback_changed"]
[connection signal="tree_entered" from="GDTerm" to="." method="_on_gd_term_tree_entered"]
[connection signal="value_changed" from="scrollbar" to="." method="_on_scrollbar_value_changed"]
